fixed sticky header padding, video container gap, text adjustments, cleaned up participants and sponsors section

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1486,30 +1486,30 @@ form.subscribe .subscribe-error {color: red;}
 }
 
 @media (max-width: 1199px) {
-    .slide-title {font-size: 100px;}
+    .slide-title {font-size: 40px;}
     .slide-subtitle {font-size: 25px;}
 }
 @media (max-width: 991px) {
-    .slide-title {font-size: 80px;}
-    .alternate .slide-title {font-size: 80px;}
+    .slide-title {font-size: 40px;}
+    .alternate .slide-title {font-size: 40px;}
     .slide-subtitle {font-size: 22px;}
     .alternate .slide-subtitle {font-size: 22px;}
 }
 @media (max-width: 767px) {
-    .slide-title {font-size: 60px; margin-bottom: 10px;}
-    .alternate .slide-title {font-size: 60px; margin-bottom: 10px;}
+    .slide-title {font-size: 30px; margin-bottom: 10px;}
+    .alternate .slide-title {font-size: 30px; margin-bottom: 10px;}
     .slide-subtitle {font-size: 18px;}
     .alternate .slide-subtitle {font-size: 18px;}
 }
 @media (max-width: 639px) {
-    .slide-title {font-size: 40px;}
-    .alternate .slide-title {font-size: 40px;}
+    .slide-title {font-size: 30px;}
+    .alternate .slide-title {font-size: 30px;}
     .slide-subtitle {font-size: 16px;}
     .alternate .slide-subtitle {font-size: 16px;}
 }
 @media (max-width: 479px) {
-    .slide-title {font-size: 40px;}
-    .alternate .slide-title {font-size: 40px;}
+    .slide-title {font-size: 30px;}
+    .alternate .slide-title {font-size: 30px;}
     .slide-subtitle {font-size: 16px;}
     .alternate .slide-subtitle {font-size: 16px;}
 }
